--- a/src/app/msfileviewer/msfileviewer.component.html
+++ b/src/app/msfileviewer/msfileviewer.component.html
@@ -1,6 +1,6 @@
 <ngx-doc-viewer
   [url]= 'url'
-  viewer="url"
-  style="width:100%;height:50vh;"
+  viewer="office"
+  style="width:100%;height:100%;"
 >
 </ngx-doc-viewer>
