--- a/src/app/pdfviewer/pdfviewer.component.html
+++ b/src/app/pdfviewer/pdfviewer.component.html
@@ -1,11 +1,9 @@
 <div class="container">
-
-    <pdf-viewer [src]= '"https://vadimdez.github.io/ng2-pdf-viewer/assets/pdf-test.pdf"'
+    <pdf-viewer [src]= 'pdfSrc'
     [render-text]="true"
     [original-size]="false"
     style="width: 900px; height: 500px"
     ></pdf-viewer>  
-
 </div>
 
 
