i don't about this commit

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,6 +28,9 @@
             <div *ngIf="file.contentType == 'eml'">
               <app-emailviewer [mailSrc]="file.contentUrl"> </app-emailviewer>
             </div>
+            <div *ngIf="file.contentType == 'msg'">
+              <app-msgviewer [url]="file.contentUrl"> </app-msgviewer>
+            </div>
             <div
               *ngIf="
                 file.contentType == 'docx' ||
