--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,23 +2,29 @@
     <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
         <mat-icon>menu</mat-icon>
     </button>
-    <span>CEM</span>
+    <a href="/" class="title">CEM</a>
+    
     <span class="toolbar-item-spacer"></span>
-    <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
+    <button mat-raised-button *ngIf="!loginDisplay" (click)="login()">
+        Login
+    </button>
+
+    <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu" *ngIf="loginDisplay">
         <mat-icon>account_circle</mat-icon>
     </button>
+
     <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
-        <button mat-menu-item routerLink="#">
+        <button mat-menu-item [routerLink]="['profile']">
             <mat-icon>person</mat-icon><span>My Account</span>
         </button>
-        <button mat-menu-item routerLink="#">
+        <button mat-menu-item [routerLink]="['settings']">
             <mat-icon>settings</mat-icon><span>Settings</span>
         </button>
         <button mat-menu-item routerLink="#">
             <mat-icon>help</mat-icon><span>Help</span>
         </button>
         <mat-divider></mat-divider>
-        <button mat-menu-item routerLink="#">
+        <button mat-menu-item (click)="logout()">
             <mat-icon>exit_to_app</mat-icon>Logout
         </button>
     </mat-menu>
@@ -27,13 +33,14 @@
 
 <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
+        <img class="img-responsive" src="assets/aureus_logo.webp" height="100" width="200" alt="This is the logo">
         <mat-nav-list>
-            <mat-list-item routerLink="#">
+            <mat-list-item routerLink="profile">
                 <mat-icon>dashboard</mat-icon><span>Dashboard</span>
             </mat-list-item>
             <mat-expansion-panel [class.mat-elevation-z0]="true">
                 <mat-expansion-panel-header>
-                    Mobile Phone
+                    Policies
                 </mat-expansion-panel-header>
                 <mat-nav-list>
                     <a mat-list-item routerLink="#">
@@ -45,22 +52,12 @@
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>
-                    Frameworks
-                </mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="#">Spring</a>
-                    <a mat-list-item routerLink="#">Hibernate</a>
-                    <a mat-list-item routerLink="#">Struts</a>
-                </mat-nav-list>
+
             </mat-expansion-panel>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <router-outlet>
-            <div class="app-sidenav-content">
-                Components open here
-            </div>
         </router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container> 
