--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,29 @@
-<div>
-    <p><strong>First Name: </strong> {{profile?.givenName}}</p>
-    <p><strong>Last Name: </strong> {{profile?.surname}}</p>
-    <p><strong>Email: </strong> {{profile?.userPrincipalName}}</p>
-    <p><strong>Id: </strong> {{profile?.id}}</p>
+<div class="center">
+    <p><strong>First Name: </strong> {{userProfile?.givenName}}</p>
+    <p><strong>Last Name: </strong> {{userProfile?.surname}}</p>
+    <p><strong>Email: </strong> {{userProfile?.userPrincipalName}}</p>
+    <p><strong>Id: </strong> {{userProfile?.id}}</p>
 </div>
+
+<!-- <div class="sidebar">
+    <h2>Personal Information</h2>
+    <ul>
+      <li>
+        <span class="label">First Name:</span>
+        <span class="value">Karthikeya</span>
+      </li>
+      <li>
+        <span class="label">Last Name:</span>
+        <span class="value">Narla</span>
+      </li>
+      <li>
+        <span class="label">Email:</span>
+        <span class="value">kerahti</span>
+      </li>
+      <li>
+        <span class="label">Id:</span>
+        <span class="value">''</span>
+      </li>
+    </ul>
+  </div> -->
+  
