--- a/src/app/msfileviewer/msfileviewer.component.html
+++ b/src/app/msfileviewer/msfileviewer.component.html
@@ -1,6 +1,3 @@
-<ngx-doc-viewer
-  [url]= 'url'
-  viewer="office"
-  style="width:100%;height:100%;"
->
-</ngx-doc-viewer>
+<div class="display">
+  <ngx-doc-viewer [url]="url" viewer="office"> </ngx-doc-viewer>
+</div>
