--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="center">
+<div class="card">
     <p><strong>First Name: </strong> {{userProfile?.givenName}}</p>
     <p><strong>Last Name: </strong> {{userProfile?.surname}}</p>
     <p><strong>Email: </strong> {{userProfile?.userPrincipalName}}</p>
