--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -70,7 +70,7 @@
       </mat-list-item>
       <mat-list-item routerLink="submissions">
         <div class="mat-nav-list">
-          <mat-icon>Submissions</mat-icon><span>Submissions</span>
+          <mat-icon>people</mat-icon><span>Submissions</span>
         </div>
       </mat-list-item>
     </mat-nav-list>
