--- a/src/app/button-cell-render/button-cell-render.component.html
+++ b/src/app/button-cell-render/button-cell-render.component.html
@@ -1,4 +1,4 @@
 <span class="button-cell">
-    <i class="material-icons edit-icon" (click)="onEditClicked($event)">edit</i>
+    <i class="material-icons edit-icon" routerLink="home">edit</i>
     <i class="material-icons view-icon" (click)="onViewClicked($event)">visibility</i>
   </span>
