--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -2,6 +2,12 @@
   flex: 1 1 auto;
 }
 
+// .custom-toolbar {
+//   background-color: #f5f5f5;
+//   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+// }
+
+
 .app-container {
   height: 90%;
   margin: 0;
